# DotMetamod

./: LICENSE  README.md
managed/DotMetamod/: .gitignore  DotMetamod.sln
managed/DotMetamod/DotHamsandwich/: DotHamsandwich.csproj
managed/DotMetamod/DotHamsandwich/FakeAmx/: AmxStructures.cs  FakeAmx.cs
managed/DotMetamod/DotHamsandwich/Properties/: AssemblyInfo.cs
managed/DotMetamod/DotMetamod/: DotMetamod.csproj  Entity.cs  Utils.cs
managed/DotMetamod/DotMetamod/HLSDK/: mathlib.cs
managed/DotMetamod/DotMetamod/HLSDK/common/: const.cs  cvardef.cs  entity_state.cs  netadr.cs  pmtrace.cs  usercmd.cs  weaponinfo.cs
managed/DotMetamod/DotMetamod/HLSDK/engine/: edict.cs  eiface.cs  progdefs.cs
managed/DotMetamod/DotMetamod/HLSDK/pm_shared/: pm_defs.cs  pm_movevars.cs
managed/DotMetamod/DotMetamod/Metamod/: dllapi.cs  engine_api.cs  meta_api.cs  plinfo.cs
managed/DotMetamod/DotMetamod/Properties/: AssemblyInfo.cs
managed/DotMetamod/DotMetamod/Wrappers/: EnginefuncsWp.cs  GlobalVariablesWp.cs  MetaGlobalsWp.cs
native/: .gitignore  CMakeLists.txt  cmake.sublime-build  dotmetamod.sublime-project
native/src/meta_assembly/: CMakeLists.txt  main.cpp
native/src/meta_mono/: CMakeLists.txt  CMonoManager.cpp  CMonoManager.h  main.cpp
native/src/shared/: CAssembly.cpp  CAssembly.h  mono_export.h
